--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -107,57 +107,15 @@
           <ul class="flex jcC gap30 inherit anc__box">
             <li class="light_btn">
               <a href="#">ご相談・お問合せ</a>
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="27"
-                viewBox="0 0 27 27">
-                <defs>
-                  <linearGradient id="linear-gradient" y1="1" x2="1" gradientUnits="objectBoundingBox">
-                    <stop offset="0" stop-color="#0497b5" />
-                    <stop offset="1" stop-color="#53d2b2" />
-                  </linearGradient>
-                </defs>
-                <g id="Group_13687" data-name="Group 13687" transform="translate(-459 -6215)">
-                  <circle id="Ellipse_137" data-name="Ellipse 137" cx="13.5" cy="13.5" r="13.5"
-                    transform="translate(459 6215)" fill="url(#linear-gradient)" />
-                  <path id="Path_44724" data-name="Path 44724" d="M7.437,0V7.437H0"
-                    transform="translate(465.039 6228.5) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
-                </g>
-              </svg>
+              {% include 'component/icons/priamry-arrow-right.njk' %}
             </li>
             <li class="light_btn">
               <a href="#">サービス資料</a>
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="27"
-                viewBox="0 0 27 27">
-                <defs>
-                  <linearGradient id="linear-gradient" y1="1" x2="1" gradientUnits="objectBoundingBox">
-                    <stop offset="0" stop-color="#0497b5" />
-                    <stop offset="1" stop-color="#53d2b2" />
-                  </linearGradient>
-                </defs>
-                <g id="Group_13687" data-name="Group 13687" transform="translate(-459 -6215)">
-                  <circle id="Ellipse_137" data-name="Ellipse 137" cx="13.5" cy="13.5" r="13.5"
-                    transform="translate(459 6215)" fill="url(#linear-gradient)" />
-                  <path id="Path_44724" data-name="Path 44724" d="M7.437,0V7.437H0"
-                    transform="translate(465.039 6228.5) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
-                </g>
-              </svg>
+              {% include 'component/icons/priamry-arrow-right.njk' %}
             </li>
             <li class="light_btn">
               <a href="#">お役立ち資料</a>
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="27"
-                viewBox="0 0 27 27">
-                <defs>
-                  <linearGradient id="linear-gradient" y1="1" x2="1" gradientUnits="objectBoundingBox">
-                    <stop offset="0" stop-color="#0497b5" />
-                    <stop offset="1" stop-color="#53d2b2" />
-                  </linearGradient>
-                </defs>
-                <g id="Group_13687" data-name="Group 13687" transform="translate(-459 -6215)">
-                  <circle id="Ellipse_137" data-name="Ellipse 137" cx="13.5" cy="13.5" r="13.5"
-                    transform="translate(459 6215)" fill="url(#linear-gradient)" />
-                  <path id="Path_44724" data-name="Path 44724" d="M7.437,0V7.437H0"
-                    transform="translate(465.039 6228.5) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
-                </g>
-              </svg>
+              {% include 'component/icons/priamry-arrow-right.njk' %}
             </li>
           </ul>
         </div>
@@ -168,32 +126,18 @@
     <div class="flex aiC gap50 sec-news__box--item">
       <ul class="flex custom-list gap27">
         <li>会社概要
-          <div class="square-container">
-            <div class="square before"></div>
-            <div class="square after"></div>
+          {% include 'component/icons/external.njk' %}
         </li>
 
         <li>「個人情報の保護に関する法律」に基づく公表事項
-          <div class="square-container">
-            <div class="square before"></div>
-            <div class="square after"></div>
-          </div>
+          {% include 'component/icons/external.njk' %}
         </li>
 
         <li>cookieポリシー
-          <div class="square-container">
-            <div class="square before"></div>
-            <div class="square after"></div>
-          </div>
+          {% include 'component/icons/external.njk' %}
         </li>
 
-          <li>サイトマップ
-            <div class="square-container">
-              <div class="square before"></div>
-              <div class="square after"></div>
-            </div>
-          </li>
-        </ul>
+        <li>サイトマップ</li>
       </ul>
     </div>
     <div class="copy-right">
