--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1617,6 +1617,7 @@
     .sec-right-wrapper {
       .sec01-right-box {
         margin-bottom: 20px;
+        justify-content: start;
 
         dt {
           flex-wrap: nowrap;
