--- a/app/assets/scss/4-pages/_catalog_list.scss
+++ b/app/assets/scss/4-pages/_catalog_list.scss
@@ -1,10 +1,16 @@
 .catalog-list-page {
   margin: auto;
   padding: 140px 0 0px;
+  @media only screen and (max-width: 770px) {
+    padding: 50px 0 0px;
+  }
   .section-header {
     width: 100%;
+    padding: 0 15px;
     height: 400px;
-    background: url(../img/common/lower_visual.png) 50% / cover no-repeat;
+    background-image: url(../img/common/lower_visual.png);
+    background-size: cover;
+    background-repeat: no-repeat;
     opacity: 1;
     display: flex;
     justify-content: center;
@@ -16,12 +22,18 @@
       color: #061625;
       font-size: 42px;
       font-weight: bold;
+      @media only screen and (max-width: 770px) {
+        font-size: 30px;
+      }
     }
     .header-subtitle {
       text-align: center;
       font: normal normal normal 20px/36px Noto Sans CJK JP;
       letter-spacing: 0px;
       color: #061625;
+      @media only screen and (max-width: 770px) {
+        font-size: 15px;
+      }
     }
   }
   .section-content {
@@ -35,6 +47,9 @@
       font: normal normal normal 16px/35px Noto Sans CJK JP;
       letter-spacing: 0px;
       color: #000000;
+      @media only screen and (max-width: 770px) {
+        font-size: 15px;
+      }
     }
     .content-list {
       .list-row {
@@ -153,6 +168,9 @@
     justify-content: center;
     align-items: center;
     padding: 30px 0 70px 0;
+    @media only screen and (max-width: 1260px) {
+      padding: 30px 15px 70px 15px;
+    }
     .bottom-button {
       width: 460px;
       height: 67px;
