--- a/app/pages/case_list/index.njk
+++ b/app/pages/case_list/index.njk
@@ -37,8 +37,8 @@
     <div class="container-1200">
       <h2 class="ttl-secondary">導入のきっかけや導入後の変化など、 <br> 実際にご利用いただいているお客様の声をご覧ください。</h2>
 
-      <ul class="flex jcC gap30 card-list">
-        <li class="card-type10">
+      <div class="flex jcC gap30 card-list">
+        <a href="#" class="card-type10">
           <div class="card--img">
             <img src="/assets/img/common/img-rectangle-01.png" alt="">
             <div class="card__img--content">インタビュー写真画像</div>
@@ -46,8 +46,8 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_btn">セゾンプラチナ・ビジネス・<br>
-                アメリカン・エキスプレスカード</a>
+              <span class="black_pill_btn">セゾンプラチナ・ビジネス・<br>
+                アメリカン・エキスプレスカード</span>
             </div>
 
             <h4 class="ttl-quaternary">
@@ -60,17 +60,17 @@
 
             <h6 class="ttl-senary">ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネス・・・</h6>
 
-            <a href="#" class="bondi_blue_btn">
+            <span class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
-            </a>
+            </span>
           </div>
-        </li>
+        </a>
 
-        <li class="card-type10">
+        <a href="#" class="card-type10">
           <div class="card--img">
             <img src="/assets/img/common/img-rectangle-01.png" alt="">
             <div class="card__img--content">インタビュー写真画像</div>
@@ -78,8 +78,8 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_btn">セゾンプラチナ・ビジネス プロ・<br>
-                アメリカン・エキスプレス®・カード</a>
+              <span class="black_pill_btn">セゾンプラチナ・ビジネス プロ・<br>
+                アメリカン・エキスプレス®・カード</span>
             </div>
 
             <h4 class="ttl-quaternary">
@@ -92,17 +92,17 @@
 
             <h6 class="ttl-senary">今まではセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード（以下、プラチナビジネス）を・・・</h6>
 
-            <a href="#" class="bondi_blue_btn">
+            <span class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
-            </a>
+            </span>
           </div>
-        </li>
+        </a>
 
-        <li class="card-type10">
+        <a href="#" class="card-type10">
           <div class="card--img">
             <img src="/assets/img/common/img-rectangle-01.png" alt="">
             <div class="card__img--content">インタビュー写真画像</div>
@@ -110,8 +110,8 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_btn">セゾンプラチナ・ビジネス・<br>
-                アメリカン・エキスプレスカード</a>
+              <span class="black_pill_btn">セゾンプラチナ・ビジネス・<br>
+                アメリカン・エキスプレスカード</span>
             </div>
 
             <h4 class="ttl-quaternary">
@@ -124,17 +124,17 @@
 
             <h6 class="ttl-senary">マーケティング支援事業では一時的にクライアントの広告費を自社で負担して支払い、その数ヵ月後にクライアントから・・・</h6>
 
-            <a href="#" class="bondi_blue_btn">
+            <span class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
-            </a>
+            </span>
           </div>
-        </li>
+        </a>
 
-        <li class="card-type10">
+        <a href="#" class="card-type10">
           <div class="card--img">
             <img src="/assets/img/common/img-rectangle-01.png" alt="">
             <div class="card__img--content">インタビュー写真画像</div>
@@ -142,7 +142,7 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_btn">ETCカード</a>
+              <span class="black_pill_btn">ETCカード</span>
             </div>
 
             <h4 class="ttl-quaternary">
@@ -155,17 +155,17 @@
 
             <h6 class="ttl-senary">ETCカードの使用実績は報告書から集計を手作業で作成しており、毎月の事務処理や経費計算処理にもにかなりの手間と時間が・・・</h6>
 
-            <a href="#" class="bondi_blue_btn">
+            <span class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
-            </a>
+            </span>
           </div>
-        </li>
+        </a>
 
-        <li class="card-type10">
+        <a href="#" class="card-type10">
           <div class="card--img">
             <img src="/assets/img/common/img-rectangle-01.png" alt="">
             <div class="card__img--content">インタビュー写真画像</div>
@@ -173,7 +173,7 @@
 
           <div class="card--content">
             <div class="card__header--btn">
-              <a href="#" class="black_pill_btn">ETCカード</a>
+              <span class="black_pill_btn">ETCカード</span>
             </div>
 
             <h4 class="ttl-quaternary">
@@ -186,16 +186,16 @@
 
             <h6 class="ttl-senary">全国各地にある社用車を管理する車輌課としては、経費削減とETC管理業務の効率化が課題でした。・・・</h6>
 
-            <a href="#" class="bondi_blue_btn">
+            <span class="bondi_blue_btn">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
-            </a>
+            </span>
           </div>
-        </li>
-      </ul>
+        </a>
+      </div>
     </div>
   </section>
 
