--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -445,7 +445,7 @@
   position: relative;
   border-radius: 50px;
   margin: 0 auto;
-  border: 3px solid #000;
+  border: 2px solid #000;
   @media #{$sp} {
     font-size: 14px;
     padding: 5px;
@@ -453,6 +453,9 @@
     border: 2px solid #000;
   }
   &:hover {
+    background-color: white;
+    border: 2px solid #000;
+    color: #000;
   }
   &.show-arrow {
     &:before {
@@ -470,6 +473,14 @@
       transition: all 0.3s;
       @media #{$sp} {
         right: 20px;
+      }
+    }
+
+    &:hover {
+      &:before {
+        content: "";
+        border-top: solid 3px #000;
+        border-right: solid 3px #000;
       }
     }
   }
@@ -501,13 +512,11 @@
   }
   // 小さいボタン
   &.small {
-    color: $white-color;
     font-size: 14px;
     font-weight: 600;
     border-radius: 11px;
 
     padding: 0 15px 3px;
-    background-color: #000;
     &:before {
       width: 6px;
       height: 6px;
@@ -516,8 +525,8 @@
     }
     &:hover {
       &::before {
-        border-top: solid 2px #fff;
-        border-right: solid 2px #fff;
+        border-top: solid 2px #000;
+        border-right: solid 2px #000;
       }
     }
   }
