--- a/app/assets/scss/4-pages/_case_detail.scss
+++ b/app/assets/scss/4-pages/_case_detail.scss
@@ -210,6 +210,21 @@
         align-items: center;
         text-align: left;
 
+        &:hover {
+          .bondi_blue_btn {
+            border: 2px solid #0497b5;
+            opacity: 1;
+            background: white;
+            color: #0497b5;
+
+            svg {
+              path {
+                stroke: #0497b5;
+              }
+            }
+          }
+        }
+
         @media #{$sp} {
           padding: 0 10px 20px;
           gap:0;
