--- a/app/pages/case_detail/index.njk
+++ b/app/pages/case_detail/index.njk
@@ -112,7 +112,7 @@ link:"#"
 
         <h2 class="ttl-secondary">本事例でご利用されたサービス</h2>
 
-        <div class="card-item flex">
+        <a href="#" class="card-item flex">
           <div class="card-item--img">
             <img src="/assets/img/credit_cards/plastic-mockup.png" alt="">
           </div>
@@ -124,15 +124,15 @@ link:"#"
               法人様向けにETCカードだけをご用意することも可能です。
             </p>
 
-            <a href="#" class="bondi_blue_btn small">
+            <span class="bondi_blue_btn small">
               詳細はこちら
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
                   transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
               </svg>
-            </a>
+            </span>
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </section>
