--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -36,7 +36,7 @@
         <h1 class="ttl-primary">個人事業主様向けサービス</h1>
       </div>
       <div>
-        <a href="#" class="blue_gradient_btn">まとめて資料をダウンロードする</a>
+        <a href="#" class="blue_gradient_btn">{{ common.button.download }}</a>
       </div>
     </section>
     <section class="section-primary">
@@ -125,7 +125,7 @@
             <h2 class="card__ttl">課題：確定申告や経費処理が面倒</h2>
             <summary class="flex gap30 aiC inquiry__box">
               <div class="flex inquiry__box--btn">
-                <a href="#" class="black_pill_btn">解決策！</a>
+                <a href="#" class="black_pill_btn">{{ common.button.solution }}</a>
               </div>
               <div class="inquiry__box--txt">
                 ビジネスでの支払いを<span>セゾンのビジネスカードに一本化</span>することで経費計上の手間を簡略化！
@@ -189,7 +189,7 @@
                       </div>
                     </div>
                   </div>
-                  <a href="#" class="bondi_blue_outline_btn">カードの詳細はこちら</a >
+                  <a href="#" class="bondi_blue_outline_btn">{{ common.button.detail }}</a >
                 </li>
                 <li class="card-type8">
                   <h3 class="card__box--ttl">
@@ -213,7 +213,7 @@
                       </div>
                     </div>
                   </div>
-                  <a href="#" class="bondi_blue_outline_btn small">カードの詳細はこちら</a >
+                  <a href="#" class="bondi_blue_outline_btn small">{{ common.button.detail }}</a >
                 </li>
               </ul>
             </div>
@@ -224,7 +224,7 @@
             <h2 class="card__ttl">課題：資金繰りを改善したい</h2>
             <summary class="flex gap30 aiC inquiry__box">
               <div class="flex inquiry__box--btn">
-                <a href="#" class="black_pill_btn">解決策！</a>
+                <a href="#" class="black_pill_btn">{{ common.button.solution }}</a>
               </div>
               <div class="inquiry__box--txt">
                 <span>「支払い.com」</span >で請求書払いをカードで先のばし。振り込みはお任せ！
@@ -247,7 +247,7 @@
             <h2 class="card__ttl">課題：資金調達をしたい</h2>
             <summary class="flex gap30 aiC inquiry__box">
               <div class="flex inquiry__box--btn">
-                <a href="#" class="black_pill_btn">解決策！</a>
+                <a href="#" class="black_pill_btn">{{ common.button.solution }}</a>
               </div>
               <div class="inquiry__box--txt">
                 <span>セゾンビジネスサポートローン</span>
@@ -330,7 +330,7 @@
       <h3 class="ttl-tertiary">
         興味のあるサービス資料をまとめてダウンロードできます。
       </h3>
-      <a href="#" class="blue_gradient_btn">まとめて資料をダウンロードする</a>
+      <a href="#" class="blue_gradient_btn">{{ common.button.download }}</a>
     </section>
     <section class="section-quaternary">
       <h5 class="ttl-sub">VOICE</h5>
