--- a/app/pages/contact/index.njk
+++ b/app/pages/contact/index.njk
@@ -24,7 +24,7 @@
 {# Main content #}
 {% block content %}
 
-<main class="contact-page">
+<main class="contact-page form-page">
   <section class="section-welcome">
     <div class="container-1200">
       <h2 class="ttl-secondary">ご相談・お問い合わせ</h2>
