--- a/app/assets/scss/4-pages/_contact.scss
+++ b/app/assets/scss/4-pages/_contact.scss
@@ -1,4 +1,4 @@
-.contact-page {
+.form-page {
   margin: auto;
   padding: 140px 0 0px;
 
@@ -86,6 +86,18 @@
       .inquiry-detail-field {
         textarea {
           height: auto;
+        }
+      }
+
+      .corporate-department-field {
+        input {
+          max-width: 300px;
+        }
+      }
+
+      .financial-service-field {
+        input {
+          max-width: 400px;
         }
       }
 
