--- a/app/pages/whitepaper_thanks/index.njk
+++ b/app/pages/whitepaper_thanks/index.njk
@@ -22,7 +22,7 @@
     <div class="container-1200">
       <h2 class="ttl-secondary">資料のダウンロードありがとうございます。</h2>
 
-      <h3 class="ttl-tertiary">メールアドレス宛に資料ダウンロード用のURLを送信いたしました。<br>すぐに読むことができますので、ぜひご覧ください！</h3>
+      <div class="ttl-tertiary">メールアドレス宛に資料ダウンロード用のURLを送信いたしました。<br>すぐに読むことができますので、ぜひご覧ください！</div>
 
       <a href="#" class="bondi_blue_btn">
         <span>トップページに戻る</span>
