--- a/app/assets/scss/4-pages/_whitepaper_thanks.scss
+++ b/app/assets/scss/4-pages/_whitepaper_thanks.scss
@@ -2,6 +2,10 @@
   margin: auto;
   padding: 130px 0 0px;
 
+  @media #{$sp} {
+    padding: 50px 0 0;
+  }
+
   .section-welcome {
     text-align: center;
     padding: 70px 0;
@@ -9,15 +13,30 @@
     background-size: cover;
     background-repeat: no-repeat;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 672px);
+
+    @media #{$sp} {
+      height: auto;
+    }
+
     .ttl-secondary {
       font-size: 32px;
       text-align: center;
       margin-bottom: 31px;
+
+      @media #{$sp} {
+        font-size: 25px;
+      }
     }
 
     .ttl-tertiary {
-      span {
-        font-weight: 400;
+      font-weight: 400;
+
+      @media #{$sp} {
+        font-size: 12px;
       }
     }
 
@@ -25,6 +44,10 @@
       display: block;
       max-width: 460px;
       font-weight: 400;
+
+      @media #{$sp} {
+        margin: 0 15px;
+      }
     }
   }
 }
